update deploy script